objects/wkcc__CmdCtrLog__c.object
<CustomObject>
    <fields>
        <fullName>wkcc__ClassName__c</fullName>
        <description>Class Name attribute to this action.</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__Level__c</fullName>
        <description>Logging Level for this action.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkcc__Message__c</fullName>
        <description>Message for this action.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__ObjectIdList__c</fullName>
        <description>Comma-separated list of Object ID&apos;s affected by this action.</description>
        <label>Object ID List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__ObjectName__c</fullName>
        <description>Object Name being saved in this action (for DML).</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__Package__c</fullName>
        <description>Denotes the package for this log.</description>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkcc__ResponseJson__c</fullName>
        <description>JSON String for debugging API calls.</description>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__StackTrace__c</fullName>
        <description>Stack Trace (for exceptions).</description>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkcc__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that initiated this action.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Command_Center_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Command Center Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Command Center Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>